Sun May  9 05:44:59 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* include/ruby/ruby.h (rb_intern): fix compile error.

Sun May  9 02:37:33 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* io.c (nogvl_copy_stream_sendfile): mixed decls not allowed.

	* include/ruby/ruby.h (rb_intern): C90 needs nonempty macro
	  arguments.

Sun May  9 01:15:18 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (stackgrowdirection): removed duplicated code, use
	  STACK_UPPER macro instead.

	* gc.h (STACK_DIR_UPPER): moved from thread_pthread.c.

Sun May  9 00:35:56 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/dl/test_base.rb (libc_so, libm_so): supports solaris.

Sun May  9 00:27:46 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_aset): fixed argument type.

Sat May  8 19:03:31 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* spec/default.mspec (config): . is no longer in $:.

Sat May  8 13:48:31 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* array.c (rb_ary_fetch, rb_ary_splice, rb_ary_store): Improve
	  IndexError messages [ruby-core:28394]

	* hash.c (rb_hash_fetch_m): Improve KeyError message

Sat May  8 11:07:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (VpAlloc): ensure buf does not get
	  collected.  based on a patch masaya tarui at [ruby-dev:41213].

Sat May  8 10:03:39 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (BasicSocket#connect_address): MacOS X 10.6
	  returns "::ffff:a.b.c.d" for IPv4-mapped IPv6 address.
	  [ruby-dev:41215] patch by Tomoyuki Chikanaga.

Fri May  7 11:30:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (install-man): install mdocs directly without
	  temporary files.  [ruby-dev:41204]

Fri May  7 09:16:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/extconf.rb (get_tclConfig_dirs): glob with EXEEXT.

	* ext/tk/extconf.rb (search_tclConfig): fixed typo.
