@@ -1,0 +1,1 @@
+generator.o: generator.c generator.h
