@@ -1,0 +1,1 @@
+parser.o: parser.c parser.h
