@@ -1,3 +1,9 @@
+Sun May  9 09:30:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/json/{generator/generator.c,parser/parser.rl}: fixed indent.
+
+	* ext/json/{generator,parser}/depend: added.
+
 Sun May  9 05:44:59 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 
 	* include/ruby/ruby.h (rb_intern): fix compile error.
